<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jevis.jeviscc</groupId>
    <artifactId>JEVisControlCenter</artifactId>
    <version>3.9.68</version>
    <packaging>jar</packaging>

    <name>JEVisControlCenter</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mainClass>org.jevis.jeconfig.JEConfig</mainClass>
        <additionalparam>-Xdoclint:none</additionalparam>
        <skipjnlp>none</skipjnlp>
    </properties>

    <organization>
        <name>Envidatec GmbH</name>
    </organization>


    <parent>
        <groupId>org.jevis</groupId>
        <artifactId>JEVisCore</artifactId>
        <version>3.4</version>
    </parent>
    <dependencies>
        <dependency>
            <groupId>com.itextpdf</groupId>
            <artifactId>itextpdf</artifactId>
            <version>5.5.13.3</version>
        </dependency>
        <dependency>
            <groupId>org.jevis.jeopc</groupId>
            <artifactId>OPCUA-Driver</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.milo</groupId>
            <artifactId>sdk-client</artifactId>
            <version>0.6.5</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.milo</groupId>
            <artifactId>stack-client</artifactId>
            <version>0.6.5</version>
        </dependency>
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>2.0.26</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-artifact</artifactId>
            <version>3.8.5</version>
        </dependency>
        <dependency>
            <groupId>com.vividsolutions</groupId>
            <artifactId>jts</artifactId>
            <version>1.13</version>
        </dependency>
        <dependency>
            <groupId>eu.hansolo</groupId>
            <artifactId>tilesfx</artifactId>
            <version>1.6.8</version>
        </dependency>
        <dependency>
            <groupId>commons-validator</groupId>
            <artifactId>commons-validator</artifactId>
            <version>1.7</version>
        </dependency>
        <dependency>
            <groupId>org.jevis.api</groupId>
            <artifactId>jeapi</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jevis.commons</groupId>
            <artifactId>JECommons</artifactId>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jxmapviewer</groupId>
            <artifactId>jxmapviewer2</artifactId>
            <version>2.6</version>
        </dependency>
        <dependency>
            <groupId>org.jevis</groupId>
            <artifactId>JEAPI-WS</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jfxtras</groupId>
            <artifactId>jfxtras-controls</artifactId>
            <version>8.0-r6</version>
        </dependency>
        <dependency>
           <groupId>de.gsi.chart</groupId>
            <artifactId>chartfx-chart</artifactId>
            <version>11.2.7</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-reload4j</artifactId>
            <version>2.0.5</version>
        </dependency>
        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.10</version>
        </dependency>
        <dependency>
            <groupId>io.github.palexdev</groupId>
            <artifactId>materialfx</artifactId>
            <version>11.16.1</version>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.jeval</groupId>
            <artifactId>jeval</artifactId>
            <version>0.9.4</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
        </dependency>
        <!--
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-1.2-api</artifactId>
        </dependency>
        -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
        </dependency>
        <dependency>
            <groupId>eu.hansolo</groupId>
            <artifactId>charts</artifactId>
            <version>1.0.5</version>
        </dependency>
        <dependency>
            <groupId>com.ibm.icu</groupId>
            <artifactId>icu4j</artifactId>
            <version>72.1</version>
        </dependency>
        <dependency>
            <groupId>de.jollyday</groupId>
            <artifactId>jollyday</artifactId>
            <version>0.5.10</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-codec</artifactId>
            <version>4.1.76.Final</version>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>org.mustangproject</groupId>-->
        <!--            <artifactId>library</artifactId>-->
        <!--            <version>2.5.6</version>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>eu.hansolo</groupId>
            <artifactId>Medusa</artifactId>
            <version>8.3</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.9.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.hildan.fxgson</groupId>
            <artifactId>fx-gson</artifactId>
            <version>3.1.2</version>
        </dependency>
        <!-- nice javafx stuff
        <dependency>
            <groupId>no.tornado</groupId>
            <artifactId>tornadofx</artifactId>
            <version>1.7.15</version>
        </dependency>
        -->
    </dependencies>


    <build>
        <plugins>


            <plugin>
                <goals></goals>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifestEntries>
                            <Permissions>all-permissions</Permissions>
                            <JavaFX-Version>8.0</JavaFX-Version>
                            <url>${project.parent.url}</url>
                            <implementation-vendor>${project.organization.name}</implementation-vendor>
                            <implementation-title>${project.name}</implementation-title>
                            <implementation-version>${project.version}</implementation-version>
                            <Application-Name>${project.name}</Application-Name>
                        </manifestEntries>
                        <manifest>
                            <mainClass>org.jevis.jeconfig.JEConfig</mainClass>
                        </manifest>
                    </archive>

                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <!--                    <compilerArgs>-->
                    <!--                        <arg>&#45;&#45;add-opens</arg>-->
                    <!--                        <arg>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</arg>-->
                    <!--                    </compilerArgs>-->
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>1.4.1</version>
                <configuration>
                    <rules>
                        <dependencyConvergence/>
                    </rules>
                </configuration>
            </plugin>

            <!--
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <mainClass>org.jevis.jeconfig.JEConfig</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                    </execution>
                </executions>
            </plugin>
            -->

        </plugins>


    </build>
</project>
